# advent-of-code

src/2023/day-01/cpp/: .clangd
src/2023/day-10/typescript/: part-2.ts
src/2024/day-01/cpp/: .clang-format  CMakeLists.txt
src/2024/day-01/cpp/src/: main.cpp
src/2024/day-01/cpp/src/part1/: part1.cpp  part1.h
src/2024/day-01/cpp/src/part2/: part2.cpp  part2.h
src/2024/day-01/perl/: main.pl  part1.pm  part2.pm
src/2024/day-01/python/: main.py  part_1.py  part_2.py
src/2024/day-01/rust/: rustfmt.toml
src/2024/day-01/rust/src/: main.rs  part_1.rs  part_2.rs
src/2024/day-01/typescript/: index.ts  package.json  part-1.ts  part-2.ts  pnpm-lock.yaml
src/2025/day-01/python/: main.py  part_1.py  part_2.py
src/2025/day-02/python/: main.py  part_1.py  part_2.py
src/2025/day-03/python/: main.py  part_1.py  part_2.py
src/2025/day-04/python/: main.py  part_1.py  part_2.py  utils.py
src/2025/day-05/python/: main.py  part_1.py  part_2.py
src/2025/day-06/python/: main.py  part_1.py  part_2.py  part_2a.py  part_2b.py
